--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,7 @@
     "permissions": [
         "activeTab",
         "storage",
-        "tabs",
-        "notifications"
+        "tabs"
     ],
     "content_scripts": [
         {
